--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cdz-utlimate-backend",
+  "name": "cdz-ultimate-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
